# OIFFmpeg

./: .gitignore  LICENSE  README.md  README_vi.md  pyproject.toml  setup.py  test_oiffmpeg.py  todo.md
oiffmpeg/: __init__.py  core.py  utils.py
test_output/: test_converted.webm
