[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oiffmpeg"
version = "0.1.0"
authors = [
  { name="Manus Team", email="contact@example.com" }, # Replace with actual contact if available
]
description = "A simple Python wrapper for common FFmpeg CLI operations."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha", # Start with Alpha status
]
keywords = ["ffmpeg", "ffprobe", "wrapper", "video", "audio", "conversion", "multimedia"]

[project.urls]
"Homepage" = "https://github.com/example/oiffmpeg" # Placeholder URL
"Bug Tracker" = "https://github.com/example/oiffmpeg/issues" # Placeholder URL

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
]

# Define the package structure
[tool.setuptools.packages.find]
where = ["."] # Root directory contains the package
include = ["oiffmpeg*"] # Include the main package directory
exclude = ["tests*"] # Exclude tests directory if added later

